# covdefaults

./: .pre-commit-config.yaml  README.md  azure-pipelines.yml  covdefaults.py  requirements-dev.txt  setup.cfg  tox.ini
tests/: covdefaults_test.py
